Nested Fixtures under Matchweeks and fixed bugs in main fixtures view

--- a/app/views/matchweeks/index.html.erb
+++ b/app/views/matchweeks/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Matchweeks for this season</h1>
 
-<%= button_to "Add Matchweek", new_matchweek_path %>
+<%= link_to "Add Matchweek", new_matchweek_path %>
 
 All Matchweeks
 <ul>
