Fixed bugs with nested Fixtures, updated Team seeds, Import from external data

--- a/app/views/fixtures/_form.html.erb
+++ b/app/views/fixtures/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@fixture, :url => matchweek_fixture_path(@matchweek)) do |f| %>
+<%= form_for([@fixture.matchweek,@fixture]) do |f| %>
 	<%= f.collection_select :home_team_id, Team.all, :id, :name %>
 
   	<%= f.label :home_team_score %>:
