--- a/app/views/fixtures/index.html.erb
+++ b/app/views/fixtures/index.html.erb
@@ -45,10 +45,11 @@
 			</tbody>
 		</table>
 
-		<h3>My Past Picks</h3>
+		<h3>My Previous Picks</h3>
 		<table>
 			<thead>
 				<tr>
+					<th>Matchweek</th>
 					<th>Selected Team</th>
 					<th>Points</th>
 					<th>GD Change</th>
@@ -57,6 +58,7 @@
 			<tbody>
 			<% @picks.each do |pick| %>
 				<tr>
+					<td><%= pick.matchweek_id %></td>
 					<td><%= Team.find(pick.team_id).name %></td>
 					<td><%= pick.result_points %></td>
 					<td><%= pick.result_gd %></td>
