--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,9 +72,50 @@ th,td{
 
 a {
 	color: #0B2E59;
-	text-decoration: none;
 }
 
 a:hover {
-	text-decoration: underline;
+	opacity: 0.5;
+}
+
+/* Devise Views */
+.devise {
+	margin: auto;
+	width: 400px;
+}
+
+.devise h2, .devise p {
+	margin: 10px 20px;
+}
+
+.devise-inner-container {
+	border: 1px solid rgba(0,0,0,0.5);
+	border-radius: 5px;
+	box-shadow: 0px 0px 5px -1px;
+}
+
+.devise-form {
+	padding: 20px;
+	background-color: #A0C55F;
+}
+
+.devise-form input {
+	margin: 5px 0;
+	padding: 10px;
+	width: 100%;
+	font-size: 18px;
+	border: none;
+	box-sizing: border-box;
+}
+
+input[type=submit] {
+	margin: 5px 0;
+	background-color: white;
+	border: 1px solid black;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+input[type=checkbox] {
+	width: 20px;
 }
