--- a/app/views/matchweeks/show.html.erb
+++ b/app/views/matchweeks/show.html.erb
@@ -4,9 +4,28 @@
 <%= link_to "Archive Matchweek", archive_matchweek_path(@matchweek), method: :post %> |
 <%= link_to "Populate or Update Fixtures", populate_matchweek_fixtures_matchweek_path(@matchweek), method: :post %></p>
 <hr>
-<% @fixtures.each do |f| %>
-	<p>Fixture # <%= f.id %></p>
-	<%= link_to "Update Fixture", edit_matchweek_fixture_path(@matchweek,f) %>
-<% end %>
+
+<table>
+	<thead>
+		<tr>
+			<th>Fixture ID</th>
+			<th>Home Team</th>
+			<th></th>
+			<th>Away Team</th>
+			<th></th>
+		</tr>
+	</thead>
+	<tbody>
+		<% @fixtures.each do |f| %>
+			<tr>
+				<td><%= f.id %></td>
+				<td><%= Team.find(f.home_team_id).name %></td>
+				<td>vs.</td>
+				<td><%= Team.find(f.away_team_id).name %></td>
+				<td><%= link_to "Update Fixture", edit_matchweek_fixture_path(@matchweek,f) %></td>
+			</tr>
+		<% end %>
+	</tbody>
+</table>
 
 <h4><%= link_to "Create Fixture", new_matchweek_fixture_path(params[:id]) %></h4>
