--- a/app/assets/stylesheets/fixtures.scss
+++ b/app/assets/stylesheets/fixtures.scss
@@ -27,7 +27,7 @@
 .styled-select {
 	margin: auto;
 	width: 300px;
-	background: url("caret.png") no-repeat right;
+	background: image-url("caret.png") no-repeat right;
 	background-size: 30px 30px;
 	background-position: 95% 10%;
 }
