--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="devise">
+<div class="devise center ma1 pa2 br1 shadow-2 bg-green mw6">
   <div class="devise-inner-container">
     <h2>Sign up</h2>
     <div class="devise-form">
@@ -6,25 +6,19 @@
         <%= devise_error_messages! %>
 
         <div class="field">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true %>
+          <%= f.email_field :email, autofocus: true, placeholder: "hello@fanfor.today", class: "w-100 pa2" %>
         </div>
 
-        <div class="field">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "off" %>
+        <div class="field mt2">
+          <%= f.password_field :password, autocomplete: "off", placeholder: "password (6 characters)", class: "w-100 pa2" %>
         </div>
 
-        <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off" %>
+        <div class="field mt2">
+          <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "password", class: "w-100 pa2" %>
         </div>
 
-        <div class="actions">
-          <%= f.submit "Sign up" %>
+        <div class="actions mt2">
+          <%= f.submit "Sign up", class: "w-100 bn f4 dim br2 ph3 pv2 mb2 dib white bg-black" %>
         </div>
       <% end %>
     </div>
