Finished restyle of primary leagues view with tachyons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <!-- <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %> -->
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.5.5/css/tachyons.min.css"/>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -17,12 +17,12 @@
           Fan for Today
         </a>
       </div>
-      <div class="dtc v-mid tr pa3">
+      <div class="dtc tr pa3">
         <% if user_signed_in? %>
           <% if current_user.admin %>
-            <%= link_to "Admin", matchweeks_path, class: "f6 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" %>
+            <%= link_to "Admin", matchweeks_path, class: "f6 fw4 hover-white no-underline white-70 dib pv2 ph3" %>
           <% end %>
-          <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "f6 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" %>
+          <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "f6 fw4 hover-white no-underline white-70 dib pv2 ph3" %>
         <% end %>
       </div>
     </nav>
