Fixed border radios on invite form

--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -140,8 +140,8 @@
         <fieldset class="cf bn ma0 pa0">
           <legend class="pa0 f5 f4-ns mb3 black-80 white">Invite new player</legend>
           <div class="cf">
-            <%= f.text_field :email, :required => true, :placeholder => "player@example.com", class: "f6 f5-l input-reset bn fl black-80 bg-white pa3 lh-solid w-100 w-75-m w-100-l br2-ns br--left-ns" %>
-            <%= f.submit "Send Invite", class: "f6 f5-l button-reset fl pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w-100 w-25-m w-100-l br2-ns br--right-ns" %>
+            <%= f.text_field :email, :required => true, :placeholder => "player@example.com", class: "f6 f5-l input-reset bn fl black-80 bg-white pa3 lh-solid w-100 w-75-m w-100-l br2-m br--left-m" %>
+            <%= f.submit "Send Invite", class: "f6 f5-l button-reset fl pv3 tc bn bg-animate bg-black-70 hover-bg-black white pointer w-100 w-25-m w-100-l br2-m br--right-m" %>
           </div>
         </fieldset>
        <% end %>
