--- a/app/assets/stylesheets/leagues.scss
+++ b/app/assets/stylesheets/leagues.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Leagues controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.right-caret {
+  height: 25px;
+  width: 25px;
+  background: image-url("caret.png") no-repeat right;
+  background-size: 50px 50px;
+  background-position: 50% 50%;
+  transform: rotate(270deg);
+  vertical-align: center;
+  display: inline-block;
+}
